--- a/segundaFase.css
+++ b/segundaFase.css
@@ -7,76 +7,76 @@
 }
 
 #um{
-  background: no-repeat center/100% url(./imgs/WeDo-Icons-Play.png);
+  background: no-repeat center/120% url(./imgs/WeDo-Icons-Play.png);
 }
 
-/* #dois{
-  background: no-repeat center/100% url(./imgs/WeDo-Icons-Play.png);
-} */
+#dois{
+  background: no-repeat center/120% url(./imgs/imgFuncoes/iniciar.jpg);
+}
 
 #tres{
-  background: no-repeat center/100% url(./imgs/WeDo-Icons-MotorHorário.png);
+  background: no-repeat center/120% url(./imgs/WeDo-Icons-MotorHorário.png);
 }
 
-/* #quatro{
-  background: no-repeat center/100% url(./imgs/WeDo-Icons-MotorHorário.png);
-} */
+#quatro{
+  background: no-repeat center/120% url(./imgs/imgFuncoes/motorHorario.jpg);
+}
 
 #cinco{
-  background: no-repeat center/100% url(./imgs/WeDo-Icons-MotorAntiHorário.png);
+  background: no-repeat center/120% url(./imgs/WeDo-Icons-MotorAntiHorário.png);
 }
 
-/* #seis{
-  background: no-repeat center/100% url(./imgs/WeDo-Icons-MotorAntiHorário.png);
-} */
+#seis{
+  background: no-repeat center/120% url(./imgs/imgFuncoes/motorAntiHorario.jpg);
+}
 
 #sete{
-  background: no-repeat center/100% url(./imgs/WeDo-Icons-Stop.png);
+  background: no-repeat center/120% url(./imgs/WeDo-Icons-Stop.png);
 }
 
-/* #oito{
-  background: no-repeat center/100% url(./imgs/WeDo-Icons-Stop.png);
-} */
+#oito{
+  background: no-repeat center/120% url(./imgs/imgFuncoes/stop.jpg);
+}
 
 #nove{
-  background: no-repeat center/100% url(./imgs/WeDo-Icons-PotênciaDoMotor.png);
+  background: no-repeat center/120% url(./imgs/WeDo-Icons-PotênciaDoMotor.png);
 }
 
-/* #dez{
-  background: no-repeat center/100% url(./imgs/WeDo-Icons-PotênciaDoMotor.png);
-} */
+#dez{
+  background: no-repeat center/120% url(./imgs/imgFuncoes/potenciaMotor.jpg);
+}
 
 #onze{
-  background: no-repeat center/100% url(./imgs/WeDo-Icons-Esperar.png);
+  background: no-repeat center/120% url(./imgs/WeDo-Icons-Esperar.png);
 }
 
-/* #doze{
-  background: no-repeat center/100% url(./imgs/WeDo-Icons-Esperar.png);
-} */
+#doze{
+  background: no-repeat center/120% url(./imgs/imgFuncoes/esperarOuAguardar.jpg);
+}
 
 #treze{
-  background: no-repeat center/100% url(./imgs/WeDo-Icons-DesligarMotor.png);
+  background: no-repeat center/120% url(./imgs/WeDo-Icons-DesligarMotor.png);
 }
 
-/* #catorze{
-  background: no-repeat center/100% url(./imgs/WeDo-Icons-DesligarMotor.png);
-} */
+#catorze{
+  background: no-repeat center/120% url(./imgs/imgFuncoes/desligarMotor.jpg);
+}
 
 #quinze{
-  background: no-repeat center/100% url(./imgs/WeDo-Icons-Loop.png);
+  background: no-repeat center/120% url(./imgs/WeDo-Icons-Loop.png);
 }
 
-/* #dezesseis{
-  background: no-repeat center/100% url(./imgs/WeDo-Icons-Loop.png);
-} */
+#dezesseis{
+  background: no-repeat center/120% url(./imgs/imgFuncoes/loop.jpg);
+}
 
 #dezessete{
-  background: no-repeat center/100% url(./imgs/WeDo-Icons-SensorDeInclinaçãoPlano.png);
+  background: no-repeat center/120% url(./imgs/WeDo-Icons-SensorDeInclinaçãoPlano.png);
 }
 
-/* #dezoito{
-  background: no-repeat center/100% url(./imgs/WeDo-Icons-SensorDeInclinaçãoPlano.png);
-} */
+#dezoito{
+  background: no-repeat center/120% url(./imgs/imgFuncoes/sensorInclinacao.jpg);
+}
 
 .verso{
   background: no-repeat center/140% url(./imgs/robozinhoIP.jpg) !important;
